[gd_scene load_steps=17 format=3 uid="uid://mq8l5owlsf0h"]

[ext_resource type="Script" path="res://scenes/character/slime/Slime.gd" id="1_8hej5"]
[ext_resource type="Texture2D" uid="uid://dj1g41scwq7bv" path="res://art/characters/enemy/slime/slime.png" id="2_cejcb"]
[ext_resource type="Texture2D" uid="uid://cky6r6f0uah76" path="res://art/characters/slime-red.png" id="3_l2vfj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yby7p"]
size = Vector2(132, 96)

[sub_resource type="CircleShape2D" id="CircleShape2D_koe41"]
radius = 155.332

[sub_resource type="CircleShape2D" id="CircleShape2D_ev0wj"]
radius = 97.3242

[sub_resource type="Curve" id="Curve_g7ur4"]
_data = [Vector2(0.0260417, 0.985626), 0.0, 0.0, 0, 0, Vector2(0.223958, 0.74414), 0.0, 0.0, 0, 0, Vector2(0.578125, 1), 0.0, 0.0, 0, 0, Vector2(0.856771, 0.721141), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 5

[sub_resource type="AtlasTexture" id="AtlasTexture_27y41"]
atlas = ExtResource("2_cejcb")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_06xv2"]
atlas = ExtResource("2_cejcb")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptyf5"]
atlas = ExtResource("2_cejcb")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ads15"]
atlas = ExtResource("2_cejcb")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2p3vq"]
atlas = ExtResource("2_cejcb")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ya0k"]
atlas = ExtResource("2_cejcb")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_epig6"]
atlas = ExtResource("3_l2vfj")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5b8d"]
atlas = ExtResource("3_l2vfj")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrpwh"]
atlas = ExtResource("3_l2vfj")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4y4q1"]
atlas = ExtResource("3_l2vfj")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f35xv"]
atlas = ExtResource("3_l2vfj")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxrwx"]
atlas = ExtResource("2_cejcb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w253v"]
atlas = ExtResource("2_cejcb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s05mi"]
atlas = ExtResource("2_cejcb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4n2h"]
atlas = ExtResource("2_cejcb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wtcj1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_27y41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06xv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptyf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ads15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p3vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ya0k")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_epig6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5b8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrpwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4y4q1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f35xv")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxrwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w253v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s05mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4n2h")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ev0wj"]
radius = 151.076

[node name="god_of_slimes" type="CharacterBody2D"]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(0.3, 0.3)
collision_layer = 4
collision_mask = 11
motion_mode = 1
script = ExtResource("1_8hej5")
Slime_type = 0

[node name="hitboxElements" type="CollisionShape2D" parent="."]
position = Vector2(2, -8)
shape = SubResource("RectangleShape2D_yby7p")

[node name="detection_area" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_koe41")

[node name="enemy_hitbox_combat" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox_combat"]
shape = SubResource("CircleShape2D_ev0wj")

[node name="canAttackCooldown" type="Timer" parent="."]

[node name="enemyIsAttackingTime" type="Timer" parent="."]
wait_time = 0.05

[node name="reginTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="waitToWalk" type="Timer" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, 40)
amount = 2
lifetime = 0.4
explosiveness = 0.15
local_coords = true
emission_shape = 3
emission_rect_extents = Vector2(1, 2)
gravity = Vector2(-150, 2.08165e-12)
scale_amount_curve = SubResource("Curve_g7ur4")
color = Color(0.117647, 0.266667, 0.407843, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(10.5625, 9.17188)
sprite_frames = SubResource("SpriteFrames_wtcj1")
animation = &"idle"

[node name="enemy_hitbox_combat" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox_combat"]
shape = SubResource("CircleShape2D_ev0wj")
