[gd_scene load_steps=22 format=3 uid="uid://cq5fo8lp2wpc0"]

[ext_resource type="Texture2D" uid="uid://dj1g41scwq7bv" path="res://art/characters/slime.png" id="1_ri4nt"]
[ext_resource type="Script" path="res://scenes/character/slime/Slime.gd" id="1_u7qum"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xx8gy"]
atlas = ExtResource("1_ri4nt")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b4to"]
atlas = ExtResource("1_ri4nt")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rin76"]
atlas = ExtResource("1_ri4nt")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4b7n"]
atlas = ExtResource("1_ri4nt")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_camdh"]
atlas = ExtResource("1_ri4nt")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8kye"]
atlas = ExtResource("1_ri4nt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfcyh"]
atlas = ExtResource("1_ri4nt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv1mf"]
atlas = ExtResource("1_ri4nt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebxa0"]
atlas = ExtResource("1_ri4nt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ebgr"]
atlas = ExtResource("1_ri4nt")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkla0"]
atlas = ExtResource("1_ri4nt")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xswa7"]
atlas = ExtResource("1_ri4nt")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ju38"]
atlas = ExtResource("1_ri4nt")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdhah"]
atlas = ExtResource("1_ri4nt")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrnvv"]
atlas = ExtResource("1_ri4nt")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wwls0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xx8gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b4to")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rin76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4b7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_camdh")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8kye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfcyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv1mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebxa0")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ebgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkla0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xswa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ju38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdhah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrnvv")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_65rwg"]
radius = 47.0106

[sub_resource type="CircleShape2D" id="CircleShape2D_i7cqb"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_swng2"]
radius = 16.4924

[node name="Slime" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_u7qum")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wwls0")
animation = &"idle"
frame_progress = 0.608185
offset = Vector2(2.08165e-12, -6)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(2.08165e-12, -4)
shape = SubResource("CircleShape2D_65rwg")

[node name="hitboxElements" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_i7cqb")

[node name="enemy_hitbox_combat" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox_combat"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_swng2")

[node name="canAttackCooldown" type="Timer" parent="."]

[node name="reginTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="healthBar" type="ProgressBar" parent="."]
visible = false
modulate = Color(0.156863, 0.784314, 0.360784, 1)
offset_left = -6.0
offset_top = -13.0
offset_right = 124.0
offset_bottom = 14.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="enemy_hitbox_combat" to="." method="_on_enemy_hitbox_combat_body_entered"]
[connection signal="body_exited" from="enemy_hitbox_combat" to="." method="_on_enemy_hitbox_combat_body_exited"]
[connection signal="timeout" from="canAttackCooldown" to="." method="_on_can_attack_cooldown_timeout"]
[connection signal="timeout" from="reginTimer" to="." method="_on_regin_timer_timeout"]
